--- a/PersonalDev.csproj
+++ b/PersonalDev.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.PageObjects" Version="3.11.0" />
     <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.3.0" />
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="ExtentReports" Version="5.0.0-alpha6" />
     <PackageReference Include="ExtentReports.signed" Version="3.1.3" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
